Fixing changeButton animation on mobiles

--- a/style.css
+++ b/style.css
@@ -210,4 +210,8 @@ fieldset label {
     .change {
         width: 100%;
     }
+
+    .contChange:hover .changeBorder {
+        width: 100%;
+    }
 }
